--- a/package.json
+++ b/package.json
@@ -1,4 +1,38 @@
 {
   "name": "techmoodivns-web-support",
-  "version": "2.1.1"
+  "version": "2.1.1",
+  "dependencies": {
+    "@date-io/moment": "^1.3.13",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.47",
+    "@material-ui/pickers": "^3.3.10",
+    "@types/axios": "^0.14.0",
+    "@types/email-validator": "^1.0.6",
+    "@types/history": "^4.7.5",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.32",
+    "@types/object-path": "^0.11.0",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.4",
+    "@types/uuid": "^8.3.0",
+    "axios": "^0.19.2",
+    "clsx": "^1.1.0",
+    "email-validator": "^2.0.4",
+    "moment": "^2.29.1",
+    "object-path": "^0.11.4",
+    "query-string": "^6.12.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "4.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "rxjs": "^6.5.5",
+    "serve": "^11.3.0",
+    "typeface-roboto": "0.0.75",
+    "typescript": "^3.7.5",
+    "uuid": "^8.3.2"
+  }
 }
