--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "techmoodivns-web-support",
+  "name": "@eu-techmoodivns/techmoodivns-support",
   "version": "2.1.1",
+  "main": "index.js",
+  "scripts": {
+    "build": "npx tsc"
+  },
   "dependencies": {
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.7",
