--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "@eu-techmoodivns/techmoodivns-support",
+  "name": "@ivorobioff/techmoodivns-support",
   "version": "2.1.1",
-  "main": "index.js",
   "scripts": {
     "build": "npx tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ivorobioff/techmoodivns-web-support.git"
+  },
+  "publishConfig": {
+    "cache": "cache/.npm",
+    "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
     "@date-io/moment": "^1.3.13",
