--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "build": "tsc",
     "release": "npm run build && cp ./package.json ./dist/ && cd ./dist && npm publish && cd ../ && rm -fR ./dist"
   },
-  "files": ["src", "index.js", "index.d.ts"],
+  "files": [
+    "src",
+    "index.js",
+    "index.d.ts"
+  ],
   "main": "./index.js",
   "types": "./index.d.ts",
   "repository": {
@@ -43,11 +47,11 @@
     "react-dom": "^16.13.1",
     "react-icons": "4.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.0",
     "rxjs": "^6.5.5",
     "serve": "^11.3.0",
-    "typeface-roboto": "0.0.75",
-    "typescript": "4.5.4",
+    "typeface-roboto": "^0.0.75",
+    "typescript": "^4.5.4",
     "uuid": "^8.3.2"
   }
 }
