--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.2.11",
   "scripts": {
     "build": "tsc",
+    "test": "jest",
     "release": "npm run build && cp ./package.json ./dist/ && cd ./dist && npm publish && cd ../ && rm -fR ./dist"
   },
   "files": [
@@ -29,7 +30,6 @@
     "@types/axios": "^0.14.0",
     "@types/email-validator": "^1.0.6",
     "@types/history": "^4.7.5",
-    "@types/jest": "^24.9.1",
     "@types/node": "^12.12.32",
     "@types/object-path": "^0.11.0",
     "@types/query-string": "^6.3.0",
@@ -53,5 +53,9 @@
     "typeface-roboto": "^0.0.75",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "ts-jest": "^27.1.3"
   }
 }
