--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.47",
-    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.60",
+    "@material-ui/pickers": "3.3.10",
     "@types/axios": "^0.14.0",
     "@types/email-validator": "^1.0.6",
     "@types/history": "^4.7.5",
